--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Sample": {
+    "payment-in-angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Sample",
+            "outputPath": "dist/payment-in-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,8 +24,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -64,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Sample:build"
+            "browserTarget": "payment-in-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Sample:build:production"
+              "browserTarget": "payment-in-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Sample:build"
+            "browserTarget": "payment-in-angular:build"
           }
         },
         "test": {
@@ -90,7 +88,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -113,19 +110,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Sample:serve"
+            "devServerTarget": "payment-in-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Sample:serve:production"
+              "devServerTarget": "payment-in-angular:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Sample",
+  "defaultProject": "payment-in-angular",
   "cli": {
-    "analytics": "bb987e1b-0e0e-4ff9-88ee-27d47b991356"
+    "analytics": false
   }
 }
