--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample",
+  "name": "payment-in-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,17 +12,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.1",
-    "@angular/cdk": "^10.2.6",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
     "@angular/forms": "~10.1.1",
-    "@angular/material": "^10.2.6",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
-    "bootstrap": "^4.5.3",
-    "ngx-bootstrap": "^6.1.0",
+    "@stripe/stripe-js": "^1.11.0",
+    "angular-notifier": "^6.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
